# omniscient

./: Cargo.toml  Makefile  README.md  build.sh  flake.nix  omniloop.service  omniloop.sh  omniscient.service  pi.Dockerfile  rust-toolchain.toml
src/: main.rs  sound.rs
src/assets/: index.html  script.js  style.css
