[package]
name = "omniscient"
version = "0.1.0"
edition = "2024"

[dependencies]
nix = "0.29.0"
axum = { version = "0.8.1", features = ["ws"] }
futures = "0.3.31"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
listenfd = "1.0.2"
shared_memory = "0.12.4"
rand = "0.9.1"
rodio = "0.20.1"
serde_json = "1.0.140"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
